--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "moment": "^2.24.0",
     "react": "^16.13.0",
+    "react-datepicker": "^2.14.0",
     "react-dom": "^16.13.0",
     "react-modal": "^3.11.2",
     "react-moment": "^0.9.7",
