--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-dom": "^16.13.0",
     "react-modal": "^3.11.2",
     "react-moment": "^0.9.7",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-switch": "^5.0.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
